# WhisperChain

./: .gitignore  .pre-commit-config.yaml  PROJECT_PLANS.md  README.md  config.json  pyproject.toml
scripts/: run_server.sh
src/cli/: run.py
src/client/: key_listener.py  stream_client.py
src/core/: audio.py  chain.py
src/server/: app.py  chain.py  server.py
src/utils/: decorators.py
src/whisperchain/cli/: run.py
src/whisperchain/core/: config.py
src/whisperchain/prompts/: transcription_cleanup.txt
src/whisperchain/server/: server.py
src/whisperchain/server/static/: index.html  script.js  style.css
src/whisperchain/ui/: streamlit_app.py
tests/: test_audio_capture.py  test_chain.py  test_key_listener.py  test_pywhispercpp.py  test_server.py  test_stream_client.py  test_streaming.py  test_utils.py
