[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-langchain"
version = "0.1.0"
description = "Voice control using Whisper.cpp and LangChain"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name="Chris Choy", email="chrischoy@ai.stanford.edu" }
]
dependencies = [
    "torch>=2.0.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "pywhispercpp>=1.3.0",
    "setuptools>=45",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "pre-commit>=3.0.0",
]
macos = [
    "coremltools>=7.0",
]
all = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
